# AgIR-CVToolkit

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  environment.yml  pyproject.toml  reorg_docs.sh  requirements.txt  update_links.py
.github/workflows/: pages.yml
docs/: README.md  _config.yml  cvat_download_usage.md  db_query_usage.md  field_database_documentation.md  index.md  mamba_setup.md  preprocessing_pipeline_usage.md  query_example_guide.md  query_quickstart.md  query_specs_quick_reference.md  repo_skeleton.md  semif_database_documentation.md  test.md
docs copy/: image_resolution_guide.md
docs copy/GETTING_STARTED/: pipeline_overview.md
docs copy/PIPELINE_STAGES/01_query/: db_query_usage.md  query_example_guide.md
docs copy/PIPELINE_STAGES/02_inference/: seg_inference_quickstart.md
docs copy/PIPELINE_STAGES/03_cvat_upload/: cvat_upload_usage.md
docs copy/PIPELINE_STAGES/06_training/: train_pipeline_usage.md
docs copy/QUICK_REFERENCES/: quick_refs_consolidated.md
docs copy/access/: index.md
docs/ARCHITECTURE/: roadmap.md
docs/ARCHITECTURE/design/feature_requirements/: FR-01.md
docs/EXAMPLES/: examples.md
docs/GETTING_STARTED/: installation.md  pipeline_overview.md  query_quickstart.md
docs/PIPELINE_STAGES/01_query/: query_example_guide.md  query_specs_quick_reference.md
docs/PIPELINE_STAGES/02_inference/: seg_inference_quickstart.md
docs/PIPELINE_STAGES/03_cvat_upload/: cvat_upload_quick_start.md
docs/PIPELINE_STAGES/04_cvat_download/: cvat_download_usage.md
docs/QUICK_REFERENCES/: quick_refs_consolidated.md
docs/_includes/: head_custom.html
docs/_sass/custom/: custom.scss
docs/access/: query-guide.md
docs/dataset/: field.md  index.md  semif.md
docs/datasets/: overview.md
docs/design/: FR-01.md
docs/design/adr/: 0001-foundation.md
docs/examples/: cash-crops.md  cover-crops.md  data-products.md  images.md  index.md  weeds.md
docs/quick_refs/: hydra_config_quick_ref.md  pipeline_overview.md  quick_refs_all.md
docs/statistics/: field-stats.md  index.md  semif-stats.md
pages/: index.md
pages/datasets/: semif.md
scripts/: extract_visuals.py
src/agir_cvtoolkit/: cli.py
src/agir_cvtoolkit/conf/augment/: default.yaml  moderate_light_leaf_a.yaml
src/agir_cvtoolkit/conf/cvat_download/: default.yaml
src/agir_cvtoolkit/conf/cvat_upload/: default.yaml
src/agir_cvtoolkit/conf/data/: default.yaml
src/agir_cvtoolkit/conf/db/: default.yaml
src/agir_cvtoolkit/core/: logging_utils.py
tests/: test_cli_field_query.py  test_cli_semif_query.py
(+26 files in other folders)
